--- a/MyMonee-Final/Views/ImpianDetailViewController.xib
+++ b/MyMonee-Final/Views/ImpianDetailViewController.xib
@@ -69,6 +69,7 @@
                             <subviews>
                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="DUJ-3p-dpu">
                                     <rect key="frame" x="13" y="22" width="348" height="4"/>
+                                    <color key="progressTintColor" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                                 </progressView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;amount&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ouf-ms-HQX">
                                     <rect key="frame" x="13" y="37" width="348" height="21"/>
