--- a/MyMonee-Final/Views/AddHomeViewController.xib
+++ b/MyMonee-Final/Views/AddHomeViewController.xib
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -22,6 +21,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddHomeViewController" customModule="MyMonee_Final" customModuleProvider="target">
             <connections>
+                <outlet property="fieldJudul" destination="aur-L0-1By" id="CjY-bv-YsZ"/>
+                <outlet property="fieldJumlah" destination="My6-rS-XnM" id="pda-Yk-i2m"/>
+                <outlet property="pemasukan" destination="7WC-4T-NLu" id="y9h-mW-B55"/>
+                <outlet property="penarikan" destination="gHI-lD-z5C" id="0nZ-ia-GxZ"/>
+                <outlet property="simpan" destination="5Rz-im-yVn" id="Lj0-Ok-UMr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -63,17 +67,17 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="sRc-rr-olg"/>
                     </constraints>
-                    <color key="textColor" name="Regular"/>
+                    <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="24"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Jumlah" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="My6-rS-XnM">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Jumlah" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="My6-rS-XnM">
                     <rect key="frame" x="16" y="155.5" width="343" height="35"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="Jej-93-bii"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="24"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <nil key="textColor"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kategori Penggunaan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LdB-cJ-IAV">
                     <rect key="frame" x="16" y="204.5" width="145.5" height="21"/>
@@ -84,13 +88,13 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7WC-4T-NLu">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7WC-4T-NLu" userLabel="PemasukanView">
                     <rect key="frame" x="16" y="241.5" width="165" height="75"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pemasukan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XJK-ex-wCb">
                             <rect key="frame" x="20" y="37.5" width="125" height="26.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
+                            <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow_Up" translatesAutoresizingMaskIntoConstraints="NO" id="QDc-du-3PK">
@@ -100,7 +104,8 @@
                             </constraints>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemGray2Color"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="XJK-ex-wCb" secondAttribute="bottom" constant="11" id="5ld-mh-L98"/>
                         <constraint firstAttribute="trailing" secondItem="XJK-ex-wCb" secondAttribute="trailing" constant="20" id="fE8-fC-Y1T"/>
@@ -110,8 +115,16 @@
                         <constraint firstItem="XJK-ex-wCb" firstAttribute="leading" secondItem="7WC-4T-NLu" secondAttribute="leading" constant="20" id="sff-wH-4ca"/>
                         <constraint firstItem="QDc-du-3PK" firstAttribute="top" secondItem="7WC-4T-NLu" secondAttribute="top" constant="15" id="wm1-eg-a1G"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="8"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="IzA-Yg-doZ" appends="YES" id="daD-Iz-1Vx"/>
+                    </connections>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gHI-lD-z5C">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gHI-lD-z5C" userLabel="PenarikanView">
                     <rect key="frame" x="194" y="241.5" width="165" height="75"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow_Down" translatesAutoresizingMaskIntoConstraints="NO" id="7Wh-g8-0Gf">
@@ -122,12 +135,13 @@
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Penarikan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TY6-IO-nzr">
                             <rect key="frame" x="20" y="36" width="125" height="28"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
+                            <color key="textColor" red="0.30980392156862746" green="0.30980392156862746" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemGray2Color"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="TY6-IO-nzr" secondAttribute="bottom" constant="11" id="52H-MQ-l4E"/>
                         <constraint firstAttribute="trailing" secondItem="TY6-IO-nzr" secondAttribute="trailing" constant="20" id="Kg0-ca-bdW"/>
@@ -137,14 +151,33 @@
                         <constraint firstItem="7Wh-g8-0Gf" firstAttribute="centerX" secondItem="gHI-lD-z5C" secondAttribute="centerX" id="q3B-6I-sIk"/>
                         <constraint firstItem="TY6-IO-nzr" firstAttribute="top" secondItem="7Wh-g8-0Gf" secondAttribute="bottom" constant="5" id="r2H-Xp-fRE"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="8"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="KS7-Lx-aSc" appends="YES" id="ZD4-PQ-gsn"/>
+                    </connections>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Rz-im-yVn">
-                    <rect key="frame" x="19" y="633" width="337" height="24"/>
+                    <rect key="frame" x="19" y="549" width="337" height="43"/>
+                    <color key="backgroundColor" red="0.74117647058823533" green="0.74117647058823533" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="24" id="a0J-qJ-tBN"/>
+                        <constraint firstAttribute="height" constant="43" id="GX9-6V-Yh8"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="14"/>
-                    <state key="normal" title="Simpan"/>
+                    <state key="normal" title="Simpan">
+                        <color key="titleColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="20"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="simpanTapped:" destination="-1" eventType="touchUpInside" id="l1q-HF-LNB"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
@@ -163,12 +196,12 @@
                 <constraint firstItem="7WC-4T-NLu" firstAttribute="width" secondItem="gHI-lD-z5C" secondAttribute="width" id="TBA-Jo-PG8"/>
                 <constraint firstItem="LdB-cJ-IAV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="XAu-re-iZ7"/>
                 <constraint firstItem="gHI-lD-z5C" firstAttribute="bottom" secondItem="7WC-4T-NLu" secondAttribute="bottom" id="a4P-ny-o5W"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="5Rz-im-yVn" secondAttribute="bottom" constant="10" id="a58-7e-d5Q"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="5Rz-im-yVn" secondAttribute="bottom" constant="75" id="a58-7e-d5Q"/>
                 <constraint firstItem="Q93-hJ-3T3" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="21.309999999999999" id="a7R-5K-O2z"/>
                 <constraint firstItem="aur-L0-1By" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="bIh-n0-jtA"/>
                 <constraint firstItem="gHI-lD-z5C" firstAttribute="top" secondItem="7WC-4T-NLu" secondAttribute="top" id="cGK-fZ-mSV"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="5Rz-im-yVn" secondAttribute="trailing" constant="19" id="eAm-CQ-MNE"/>
-                <constraint firstItem="5Rz-im-yVn" firstAttribute="top" relation="lessThanOrEqual" secondItem="7WC-4T-NLu" secondAttribute="bottom" priority="750" constant="250.5" id="eoQ-PU-c6Z"/>
+                <constraint firstItem="5Rz-im-yVn" firstAttribute="top" relation="greaterThanOrEqual" secondItem="7WC-4T-NLu" secondAttribute="bottom" constant="10" id="eoQ-PU-c6Z"/>
                 <constraint firstItem="Q93-hJ-3T3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18.629999999999999" id="fSW-cc-T8D"/>
                 <constraint firstItem="My6-rS-XnM" firstAttribute="top" secondItem="h6S-ww-LLg" secondAttribute="bottom" id="fbA-dj-HhO"/>
                 <constraint firstItem="aur-L0-1By" firstAttribute="trailing" secondItem="Jkj-Y0-BHK" secondAttribute="trailing" id="jYu-mQ-Qbz"/>
@@ -187,6 +220,16 @@
             </constraints>
             <point key="canvasLocation" x="136.875" y="83.450704225352112"/>
         </view>
+        <tapGestureRecognizer id="IzA-Yg-doZ" userLabel="Tap Gesture Recognizer Pemasukan">
+            <connections>
+                <action selector="pemasukanTapped:" destination="-1" id="uDD-SH-k9Q"/>
+            </connections>
+        </tapGestureRecognizer>
+        <tapGestureRecognizer id="KS7-Lx-aSc" userLabel="Tap Gesture Recognizer Penarikan">
+            <connections>
+                <action selector="penarikanTapped:" destination="-1" id="fOY-Kq-Skx"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="Arrow_Down" width="16" height="16"/>
@@ -195,8 +238,5 @@
         <namedColor name="Regular">
             <color red="0.50999999046325684" green="0.50999999046325684" blue="0.50999999046325684" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
