--- a/MyMonee-Final/Views/ImpianViewControllerView.xib
+++ b/MyMonee-Final/Views/ImpianViewControllerView.xib
@@ -15,8 +15,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImpianViewController" customModule="MyMonee_Final" customModuleProvider="target">
             <connections>
-                <outlet property="impianTableView" destination="fzh-4D-tV5" id="iYv-qq-l93"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="impianTable" destination="fzh-4D-tV5" id="jfl-ws-kSQ"/>
+                <outlet property="viewImpian" destination="i5M-Pr-FkT" id="wX1-iS-zE6"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
