--- a/MyMonee-Final/Views/TableViewCells/ImpianTableViewCell.xib
+++ b/MyMonee-Final/Views/TableViewCells/ImpianTableViewCell.xib
@@ -14,10 +14,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImpianTableViewCell" customModule="MyMonee_Final" customModuleProvider="target">
             <connections>
-                <outlet property="impianViewTableCell" destination="H2p-sc-9uM" id="8VC-vT-LO7"/>
-                <outlet property="progressBarImpian" destination="dJd-NX-95m" id="a6D-62-yqe"/>
-                <outlet property="titleImpian" destination="fc2-vV-qzx" id="kPd-er-lle"/>
-                <outlet property="totalImpian" destination="X2S-dm-EIX" id="k6u-OI-OGV"/>
+                <outlet property="amount" destination="X2S-dm-EIX" id="W3K-ac-IZS"/>
+                <outlet property="progress" destination="dJd-NX-95m" id="eMl-cW-CL9"/>
+                <outlet property="title" destination="fc2-vV-qzx" id="RPe-GO-0g3"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,23 +28,23 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc2-vV-qzx">
-                        <rect key="frame" x="10" y="11" width="289" height="26"/>
+                        <rect key="frame" x="10" y="11" width="289" height="26.5"/>
                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                         <color key="textColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.10196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.70999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="dJd-NX-95m">
-                        <rect key="frame" x="10" y="47" width="289" height="4"/>
+                        <rect key="frame" x="10" y="47.5" width="289" height="4"/>
                         <color key="tintColor" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
                     </progressView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="akar-icons_chevron-right" translatesAutoresizingMaskIntoConstraints="NO" id="kT0-mV-FsU">
-                        <rect key="frame" x="309" y="37" width="24" height="24"/>
+                        <rect key="frame" x="309" y="37.5" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="kT0-mV-FsU" secondAttribute="height" multiplier="1:1" id="zRm-XD-dRu"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="IDR XXX.XXX / IDR X.XXX.XXX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2S-dm-EIX">
-                        <rect key="frame" x="10" y="61" width="289" height="16"/>
+                        <rect key="frame" x="10" y="61.5" width="289" height="15.5"/>
                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="11"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -71,6 +70,7 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <accessibility key="accessibilityConfiguration" identifier="impianRowTable"/>
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                     <integer key="value" value="4"/>
